--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/edge-config": "^1.4.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
